[package]
authors = ['ChainSafe Systems']
description = 'PINT specific RPC.'
edition = '2018'
license = 'LGPL-3.0-only'
name = 'pint-rpc'
repository = 'https://github.com/ChainSafe/PINT/'
version = '0.0.1'

[dependencies]
jsonrpc-core = "18.0.0"
codec = { package = "parity-scale-codec", version = "2.3.1" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
#sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.19" }

# PINT dependencies
pallet-asset-index-rpc= { path = "../pallets/asset-index/rpc" }
primitives = { path = "../primitives/primitives" }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
