[package]
authors = ['ChainSafe Systems']
description = 'PINT specific RPC.'
edition = '2021'
license = 'LGPL-3.0-only'
name = 'pint-rpc'
repository = 'https://github.com/ChainSafe/PINT/'
version = '0.0.1'

[dependencies]

jsonrpsee = { version = "0.13.0", features = ["server"] }
jsonrpc-core = "18.0.0"
codec = { package = "parity-scale-codec", version = "2.3.1" }
sp-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
#sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-client-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-rpc = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }
pallet-transaction-payment-rpc = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.24" }

# PINT dependencies
pallet-asset-index-rpc= { path = "../pallets/asset-index/rpc" }
primitives = { path = "../primitives/primitives" }

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']
