[build-dependencies.substrate-wasm-builder]
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '4.0.0'

[package]
authors = ['Anonymous']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'LGPL-3.0-only'
name = 'parachain-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-parachain-template'

version = '2.0.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.0'

[dependencies.frame-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
branch = 'master'
version = '3.0.0'

[dependencies.frame-executive]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.frame-support]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.frame-system]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.frame-system-benchmarking]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
optional = true
branch = 'master'
version = '3.0.0'

[dependencies.frame-system-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.hex-literal]
optional = true
version = '0.3.1'

[dependencies.pallet-balances]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.pallet-randomness-collective-flip]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.pallet-sudo]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.pallet-timestamp]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.pallet-transaction-payment]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.pallet-transaction-payment-rpc-runtime-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.119'

[dependencies.sp-api]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.sp-block-builder]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.sp-core]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.sp-inherents]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.sp-io]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.sp-offchain]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.sp-runtime]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.sp-session]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.sp-std]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.sp-transaction-pool]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.sp-version]
default-features = false
git = 'https://github.com/paritytech/substrate.git'
branch = 'master'
version = '3.0.0'

[dependencies.pallet-asset-depository]
default-features = false
path = '../pallets/asset-depository'
version = '0.0.1'

[dependencies.pallet-committee]
default-features = false
path = '../pallets/committee'
version = '0.0.1'

[dependencies.pallet-local-treasury]
default-features = false
path = '../pallets/local-treasury'
version = '0.0.1'

[dependencies.pallet-asset-index]
default-features = false
path = '../pallets/asset-index'
version = '0.0.1'

[dependencies.pallet-saft-registry]
default-features = false
path = '../pallets/saft-registry'
version = '0.0.1'

[dependencies.pallet-price-feed]
default-features = false
path = '../pallets/price-feed'
version = '0.0.1'

[dependencies.pallet-remote-asset-manager]
default-features = false
path = '../pallets/remote-asset-manager'
version = '0.0.1'

[dependencies.pallet-chainlink-feed]
default_features = false
package = 'pallet-chainlink-feed'
git = "https://github.com/smartcontractkit/chainlink-polkadot"
branch = "master"

[dependencies.xcm-calls]
default-features = false
path = '../primitives/xcm-calls'
version = '0.0.1'

# Cumulus dependencies
[dependencies.parachain-info]
default-features = false
git = 'https://github.com/paritytech/cumulus.git'
branch = 'master'
version = '0.1.0'

[dependencies.cumulus-pallet-parachain-system]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'master'
default-features = false

[dependencies.cumulus-primitives-core]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'master'
default-features = false

[dependencies.cumulus-pallet-xcm]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'master'
default-features = false

[dependencies.cumulus-pallet-xcmp-queue]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'master'
default-features = false

[dependencies.cumulus-pallet-dmp-queue]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'master'
default-features = false

[dependencies.cumulus-primitives-utility]
git = 'https://github.com/paritytech/cumulus.git'
branch = 'master'
default-features = false

# Polkadot dependencies
[dependencies.polkadot-parachain]
git = 'https://github.com/paritytech/polkadot'
branch = 'master'
default-features = false

[dependencies.xcm]
git = 'https://github.com/paritytech/polkadot'
branch = 'master'
default-features = false

[dependencies.xcm-builder]
git = 'https://github.com/paritytech/polkadot'
branch = 'master'
default-features = false

[dependencies.xcm-executor]
git = 'https://github.com/paritytech/polkadot'
branch = 'master'
default-features = false

[dependencies.pallet-xcm]
git = 'https://github.com/paritytech/polkadot'
branch = 'master'
default-features = false

[features]
default = ['std']
runtime-benchmarks = [
	'sp-runtime/runtime-benchmarks',
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'hex-literal',
	'frame-system/runtime-benchmarks',
    'pallet-asset-depository/runtime-benchmarks',
    'pallet-asset-index/runtime-benchmarks',
    'pallet-price-feed/runtime-benchmarks',
    'pallet-local-treasury/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
    'pallet-committee/runtime-benchmarks',
    'pallet-xcm/runtime-benchmarks',
    'pallet-saft-registry/runtime-benchmarks',
    'pallet-remote-asset-manager/runtime-benchmarks',
    'xcm-builder/runtime-benchmarks'
]
std = [
	'codec/std',
	'serde',
	'sp-api/std',
	'sp-std/std',
	'sp-io/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-version/std',
	'sp-offchain/std',
	'sp-session/std',
	'sp-block-builder/std',
	'sp-transaction-pool/std',
	'sp-inherents/std',
	'frame-support/std',
	'frame-executive/std',
	'frame-system/std',
	'frame-system-rpc-runtime-api/std',
	'pallet-balances/std',
	'pallet-randomness-collective-flip/std',
	'pallet-timestamp/std',
	'pallet-sudo/std',
	'pallet-transaction-payment/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	'parachain-info/std',
	'cumulus-pallet-parachain-system/std',
	'cumulus-primitives-core/std',
	'xcm/std',
	'xcm-builder/std',
	'xcm-executor/std',
	'cumulus-pallet-xcm/std',
	'cumulus-pallet-xcmp-queue/std',
	'cumulus-pallet-dmp-queue/std',
	'cumulus-primitives-utility/std',
	'pallet-asset-depository/std',
	'pallet-asset-index/std',
	'pallet-committee/std',
	'pallet-local-treasury/std',
	'pallet-price-feed/std',
	'pallet-remote-asset-manager/std',
	'pallet-saft-registry/std',
	'pallet-chainlink-feed/std',
	'xcm-calls/std'
]