[package]
authors = ['ChainSafe Systems']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'LGPL-3.0-only'
name = 'parachain-runtime'
repository = 'https://github.com/substrate-developer-hub/substrate-parachain-template'

version = '2.0.0'
[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate', branch = 'master' }

[dependencies]
codec = { package = 'parity-scale-codec', version = '2.0.0', default-features = false, features = ['derive']}
log = { version = '0.4.14', default-features = false }
serde = { version = '1.0.119', optional = true, features = ['derive'] }
hex-literal = { version = '0.3.1', optional = true }

# Substrate Dependencies
## Substrate Primitive Dependencies
sp-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }
sp-io = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }
frame-try-runtime = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false, optional = true }
sp-version = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }

## Substrate FRAME Dependencies
frame-executive = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false, optional = true }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false, optional = true }
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }

## Substrate Pallet Dependencies
pallet-aura = { git = 'https://github.com/paritytech/substrate', default-features = false, branch = 'master' }
pallet-authorship = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false}
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.5", default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }
pallet-session = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false, features = ['historical'] }
pallet-sudo = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = 'polkadot-v0.9.5', default-features = false }

# Cumulus Dependencies
pallet-collator-selection = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.5', default-features = false }
cumulus-pallet-aura-ext = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.5', default-features = false }
cumulus-pallet-parachain-system = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.5', default-features = false }
cumulus-pallet-dmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.5', default-features = false }
cumulus-pallet-xcm = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.5', default-features = false }
cumulus-pallet-xcmp-queue = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.5', default-features = false }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.5', default-features = false }
cumulus-primitives-utility = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.5', default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.5", default-features = false }
parachain-info = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.5', default-features = false }

# Polkadot Dependencies
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.5', default-features = false }
xcm = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.5', default-features = false }
xcm-builder = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.5', default-features = false }
xcm-executor = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.5', default-features = false }
pallet-xcm = { git = 'https://github.com/paritytech/polkadot', branch = 'release-v0.9.5', default-features = false }

# ORML Dependencies
orml-currencies = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master', default-features = false }
orml-tokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master', default-features = false }
orml-xtokens = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master', default-features = false }
orml-xcm-support = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master', default-features = false }
orml-traits = { git = 'https://github.com/open-web3-stack/open-runtime-module-library', branch = 'master', default-features = false }

# PINT dependencies
pallet-committee = {path = '../pallets/committee', default-features = false }
pallet-local-treasury = {path = '../pallets/local-treasury', default-features = false }
pallet-asset-index = {path = '../pallets/asset-index', default-features = false }
pallet-saft-registry = {path = '../pallets/saft-registry', default-features = false }
pallet-price-feed = {path = '../pallets/price-feed', default-features = false }
pallet-remote-asset-manager = { path = '../pallets/remote-asset-manager', default-features = false }
primitives = { path = '../primitives/primitives', default-features = false }
xcm-calls = {path = '../primitives/xcm-calls', default-features = false }
xcm-assets = { path = "../primitives/xcm-assets", default-features = false }

pallet-chainlink-feed = { git = 'https://github.com/ChainSafe/chainlink-polkadot', branch = 'upgrade-substrate-master', default-features = false }

[dev-dependencies]
hex-literal = '0.3.1'
hex = '0.4.3'

[features]
default = ['std']
runtime-benchmarks = [
	'hex-literal',
	'sp-runtime/runtime-benchmarks',
	'frame-benchmarking',
	'frame-support/runtime-benchmarks',
	'frame-system-benchmarking',
	'frame-system/runtime-benchmarks',
	'xcm-builder/runtime-benchmarks',
	'pallet-collator-selection/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
	
    'pallet-asset-index/runtime-benchmarks',
    'pallet-price-feed/runtime-benchmarks',
    'pallet-local-treasury/runtime-benchmarks',
	'pallet-balances/runtime-benchmarks',
	'pallet-timestamp/runtime-benchmarks',
    'pallet-committee/runtime-benchmarks',
    'pallet-xcm/runtime-benchmarks',
    'pallet-saft-registry/runtime-benchmarks',
    'pallet-remote-asset-manager/runtime-benchmarks',
    'pallet-collective/runtime-benchmarks',

	'orml-tokens/runtime-benchmarks'
]
std = [
	'codec/std',
	'serde',
	'log/std',
	
	'frame-support/std',
	'frame-executive/std',
	'frame-system/std',
	'frame-try-runtime/std',
	
	'sp-api/std',
	'sp-std/std',
	'sp-io/std',
	'sp-consensus-aura/std',
	'sp-core/std',
	'sp-runtime/std',
	'sp-version/std',
	'sp-offchain/std',
	'sp-session/std',
	'sp-block-builder/std',
	'sp-transaction-pool/std',
	'sp-inherents/std',
	'pallet-aura/std',
	'pallet-authorship/std',
	'pallet-balances/std',
	'pallet-collective/std',
	'pallet-randomness-collective-flip/std',
	'pallet-timestamp/std',
	'pallet-sudo/std',
	'pallet-session/std',
	'pallet-transaction-payment/std',
	'primitives/std',

	'parachain-info/std',
	'cumulus-pallet-aura-ext/std',
	'cumulus-pallet-parachain-system/std',
	'cumulus-pallet-xcmp-queue/std',
	'cumulus-pallet-xcm/std',
	'cumulus-primitives-core/std',
	'cumulus-primitives-utility/std',
	'cumulus-primitives-timestamp/std',

	'xcm/std',
	'xcm-builder/std',
	'xcm-executor/std',

	'pallet-asset-index/std',
	"pallet-collator-selection/std",
	'pallet-committee/std',
	'pallet-local-treasury/std',
	'pallet-price-feed/std',
	'pallet-remote-asset-manager/std',
	'pallet-saft-registry/std',
	'pallet-chainlink-feed/std',
	'xcm-calls/std',
	'xcm-assets/std',

	'orml-currencies/std',
	'orml-tokens/std',
	'orml-xtokens/std',
	'orml-xcm-support/std',
	'orml-traits/std',
]